tests/ui/invalid_pymethod_enum.stderr
error[E0271]: type mismatch resolving `<ComplexEnum as PyClass>::Frozen == False`
  --> tests/ui/invalid_pymethod_enum.rs:11:24
   |
11 |     fn mutate_in_place(&mut self) {
   |                        ^ type mismatch resolving `<ComplexEnum as PyClass>::Frozen == False`
   |
note: expected this to be `False`
  --> tests/ui/invalid_pymethod_enum.rs:3:1
   |
 3 | #[pyclass]
   | ^^^^^^^^^^
note: required by a bound in `extract_pyclass_ref_mut`
  --> src/impl_/extract_argument.rs
   |
   | pub fn extract_pyclass_ref_mut<'a, 'holder, T: PyClass<Frozen = False>>(
   |                                                        ^^^^^^^^^^^^^^ required by this bound in `extract_pyclass_ref_mut`
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<ComplexEnum as PyClass>::Frozen == False`
 --> tests/ui/invalid_pymethod_enum.rs:9:1
  |
9 | #[pymethods]
  | ^^^^^^^^^^^^ type mismatch resolving `<ComplexEnum as PyClass>::Frozen == False`
  |
note: expected this to be `False`
 --> tests/ui/invalid_pymethod_enum.rs:3:1
  |
3 | #[pyclass]
  | ^^^^^^^^^^
note: required by a bound in `PyClassGuardMut`
 --> src/pyclass/guard.rs
  |
  | pub struct PyClassGuardMut<'a, T: PyClass<Frozen = False>> {
  |                                           ^^^^^^^^^^^^^^ required by this bound in `PyClassGuardMut`
  = note: this error originates in the attribute macro `pymethods` which comes from the expansion of the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<TupleEnum as PyClass>::Frozen == False`
  --> tests/ui/invalid_pymethod_enum.rs:27:24
   |
27 |     fn mutate_in_place(&mut self) {
   |                        ^ type mismatch resolving `<TupleEnum as PyClass>::Frozen == False`
   |
note: expected this to be `False`
  --> tests/ui/invalid_pymethod_enum.rs:19:1
   |
19 | #[pyclass]
   | ^^^^^^^^^^
note: required by a bound in `extract_pyclass_ref_mut`
  --> src/impl_/extract_argument.rs
   |
   | pub fn extract_pyclass_ref_mut<'a, 'holder, T: PyClass<Frozen = False>>(
   |                                                        ^^^^^^^^^^^^^^ required by this bound in `extract_pyclass_ref_mut`
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<TupleEnum as PyClass>::Frozen == False`
  --> tests/ui/invalid_pymethod_enum.rs:25:1
   |
25 | #[pymethods]
   | ^^^^^^^^^^^^ type mismatch resolving `<TupleEnum as PyClass>::Frozen == False`
   |
note: expected this to be `False`
  --> tests/ui/invalid_pymethod_enum.rs:19:1
   |
19 | #[pyclass]
   | ^^^^^^^^^^
note: required by a bound in `PyClassGuardMut`
  --> src/pyclass/guard.rs
   |
   | pub struct PyClassGuardMut<'a, T: PyClass<Frozen = False>> {
   |                                           ^^^^^^^^^^^^^^ required by this bound in `PyClassGuardMut`
   = note: this error originates in the attribute macro `pymethods` which comes from the expansion of the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
